--- a/hola/hola.html
+++ b/hola/hola.html
@@ -6,7 +6,7 @@
       angular.module('helloApp', [])
         .controller('HelloCtrl', ['$scope',function($scope) {
             $scope.greeting = 'Hola';
-            $scope.person = 'Chicos';
+            $scope.person = 'Chicos!!';
         }]);
     </script>    
   </head>
